# macro_grammar

./: Cargo.toml  main.rs
common/: Cargo.toml
common/src/: macros.rs
impl/: Cargo.toml
impl/src/: ast_transform.rs  ast_utils.rs  derive_language.rs  derive_t.rs  lib.rs
impl/src/ast_transform/: ast.rs
impl/src/derive_t/: ast.rs
impl/src/derive_t/ast/: valid.rs
impl/tests/: ast_transform.rs
impl/trybuild/ast_transform/: 01-recognize.rs
impl/trybuild/derive_language/: 01-recognize.rs
impl/trybuild/derive_t/: 01-recognize.rs  02-creates-macro.rs  03-no-__LAST.rs  04-empty-enum.rs  05-too-many-attrs.rs  06-invalid-combination.rs  07-no-attrs.rs
src/: derive_t.rs  lib.rs
src/derive_t/: ast.rs
tests/: derive_language.rs  derive_t.rs  trybuild.rs
trybuild/: 01-recognize.rs  02-creates-macro.rs
trybuild/derive_language/: 01-recognize.rs
trybuild/derive_t/: 01-recognize.rs  02-creates-macro.rs  03-no-__LAST.rs  04-empty-enum.rs  05-too-many-attrs.rs  06-invalid-combination.rs  07-no-attrs.rs
