[package]
name = "macro-grammar"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[bin]]
name = "testing"
path = "main.rs"

[workspace]

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = "1.0.60"
common = { path = "common" }

[dev-dependencies]
trybuild = "1.0.40"
