[package]
name = "macro_grammar_impl"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.60", features = ["extra-traits"] }
common = { path = "../common" }
heck = "0.3.2"

[dev-dependencies]
rowan = "0.12.5"
trybuild = "1.0.40"
smol_str = "0.1.17"
